Prevent overflowing lines

--- a/style/main.css
+++ b/style/main.css
@@ -380,6 +380,9 @@ blockquote {
   margin-left: auto;
   margin-right: auto;
   margin-top: 60px; }
+  .page-wrapper p {
+    overflow-wrap: break-word;
+    word-wrap: break-word; }
   .page-wrapper .post-summary {
     margin-bottom: 30px; }
 
